--- a/models.ipynb
+++ b/models.ipynb
@@ -17,18 +17,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "5a805af4",
+   "execution_count": 133,
+   "id": "3a174647",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "train = pd.read_csv(\"train_for_students.csv\")\n",
-    "test = pd.read_csv(\"test_for_students.csv\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "e8c7e0d5",
+   "id": "1bc71bf2",
    "metadata": {},
    "source": [
     "## Pre-processing\n",
@@ -39,6 +36,8 @@
     "\n",
     "For string data that doesn't seem to be ordered, we'll use **[one-hot encoding](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.OneHotEncoder.html#sklearn.preprocessing.OneHotEncoder)** so the model doesn't interpret these features as having an order.\n",
     "\n",
+    "* Note that OneHotEncoder() by default sorts String categorical features alphabetically\n",
+    "\n",
     "**ordered string features: f3, f11**\n",
     "\n",
     "**unordered string features: f1, f5, f7, f9, f16** (some of these could technically be considered ordered... but I didn't think they were)"
@@ -46,26 +45,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 138,
    "id": "2fb0664a",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Found unknown categories ['Bird', 'Cat', 'Dog'] in column 0 during transform",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[91], line 20\u001b[0m\n\u001b[0;32m     18\u001b[0m     one_hot\u001b[38;5;241m.\u001b[39mfit(train[[feature]])\n\u001b[0;32m     19\u001b[0m     train[feature] \u001b[38;5;241m=\u001b[39m one_hot\u001b[38;5;241m.\u001b[39mtransform(train[[feature]])\n\u001b[1;32m---> 20\u001b[0m     test[feature] \u001b[38;5;241m=\u001b[39m \u001b[43mone_hot\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtransform\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtest\u001b[49m\u001b[43m[\u001b[49m\u001b[43m[\u001b[49m\u001b[43mfeature\u001b[49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     22\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     23\u001b[0m \u001b[38;5;124;03mone hot encoding is essentially a collection of mappings from each set of features to a set of one-hot vectors.\u001b[39;00m\n\u001b[0;32m     24\u001b[0m \n\u001b[0;32m     25\u001b[0m \u001b[38;5;124;03mwe need to make sure we \u001b[39;00m\n\u001b[0;32m     26\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     28\u001b[0m \u001b[38;5;66;03m# splitting features\u001b[39;00m\n",
-      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\sklearn\\utils\\_set_output.py:142\u001b[0m, in \u001b[0;36m_wrap_method_output.<locals>.wrapped\u001b[1;34m(self, X, *args, **kwargs)\u001b[0m\n\u001b[0;32m    140\u001b[0m \u001b[38;5;129m@wraps\u001b[39m(f)\n\u001b[0;32m    141\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwrapped\u001b[39m(\u001b[38;5;28mself\u001b[39m, X, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m--> 142\u001b[0m     data_to_wrap \u001b[38;5;241m=\u001b[39m \u001b[43mf\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    143\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(data_to_wrap, \u001b[38;5;28mtuple\u001b[39m):\n\u001b[0;32m    144\u001b[0m         \u001b[38;5;66;03m# only wrap the first output for cross decomposition\u001b[39;00m\n\u001b[0;32m    145\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m (\n\u001b[0;32m    146\u001b[0m             _wrap_data_with_container(method, data_to_wrap[\u001b[38;5;241m0\u001b[39m], X, \u001b[38;5;28mself\u001b[39m),\n\u001b[0;32m    147\u001b[0m             \u001b[38;5;241m*\u001b[39mdata_to_wrap[\u001b[38;5;241m1\u001b[39m:],\n\u001b[0;32m    148\u001b[0m         )\n",
-      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\sklearn\\preprocessing\\_encoders.py:877\u001b[0m, in \u001b[0;36mOneHotEncoder.transform\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m    872\u001b[0m \u001b[38;5;66;03m# validation of X happens in _check_X called by _transform\u001b[39;00m\n\u001b[0;32m    873\u001b[0m warn_on_unknown \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdrop \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhandle_unknown \u001b[38;5;129;01min\u001b[39;00m {\n\u001b[0;32m    874\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mignore\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    875\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minfrequent_if_exist\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    876\u001b[0m }\n\u001b[1;32m--> 877\u001b[0m X_int, X_mask \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_transform\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    878\u001b[0m \u001b[43m    \u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    879\u001b[0m \u001b[43m    \u001b[49m\u001b[43mhandle_unknown\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mhandle_unknown\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    880\u001b[0m \u001b[43m    \u001b[49m\u001b[43mforce_all_finite\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mallow-nan\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m    881\u001b[0m \u001b[43m    \u001b[49m\u001b[43mwarn_on_unknown\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mwarn_on_unknown\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    882\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    883\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_map_infrequent_categories(X_int, X_mask)\n\u001b[0;32m    885\u001b[0m n_samples, n_features \u001b[38;5;241m=\u001b[39m X_int\u001b[38;5;241m.\u001b[39mshape\n",
-      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\sklearn\\preprocessing\\_encoders.py:174\u001b[0m, in \u001b[0;36m_BaseEncoder._transform\u001b[1;34m(self, X, handle_unknown, force_all_finite, warn_on_unknown)\u001b[0m\n\u001b[0;32m    169\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m handle_unknown \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124merror\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m    170\u001b[0m     msg \u001b[38;5;241m=\u001b[39m (\n\u001b[0;32m    171\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFound unknown categories \u001b[39m\u001b[38;5;132;01m{0}\u001b[39;00m\u001b[38;5;124m in column \u001b[39m\u001b[38;5;132;01m{1}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    172\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m during transform\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(diff, i)\n\u001b[0;32m    173\u001b[0m     )\n\u001b[1;32m--> 174\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(msg)\n\u001b[0;32m    175\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    176\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m warn_on_unknown:\n",
-      "\u001b[1;31mValueError\u001b[0m: Found unknown categories ['Bird', 'Cat', 'Dog'] in column 0 during transform"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "train = pd.read_csv(\"train_for_students.csv\")\n",
+    "test = pd.read_csv(\"test_for_students.csv\")\n",
+    "\n",
+    "\n",
     "# manually doing ordinal encoding for f3, f11\n",
     "f3_mapping = {\"Low\":0, \"Medium\":1, \"High\":2}\n",
     "train[\"f3\"] = train[\"f3\"].map(f3_mapping)\n",
@@ -80,32 +68,99 @@
     "# NOTE: for however many categories there are in a feature (for example, f1 has 3 categories: Bird, Cat, Dog),\n",
     "#  We'll need to add this amount of columns. For example, f1 gets turned into 3 feature columns after one-hot encoding\n",
     "one_hot = OneHotEncoder(sparse_output = False)\n",
-    "one_hot_features = [\"f1\", \"f5\", \"f7\", \"f9\", \"f16\"]\n",
-    "one_hot.fit(train[one_hot_features])\n",
-    "\n",
-    "for feature in one_hot_features:\n",
-    "    one_hot.fit(train[[feature]])\n",
-    "    train[feature] = one_hot.transform(train[[feature]])\n",
-    "    test[feature] = one_hot.transform(test[[feature]])\n",
     "    \n",
-    "\"\"\"\n",
-    "one hot encoding is essentially a collection of mappings from each set of features to a set of one-hot vectors.\n",
+    "# print(train[\"f1\"])\n",
     "\n",
-    "we need to make sure we \n",
-    "\"\"\"\n",
+    "\n",
+    "# encoding f1\n",
+    "one_hot.fit(train[[\"f1\"]])\n",
+    "f1_encode_train = one_hot.transform(train[[\"f1\"]])\n",
+    "f1_encode_test = one_hot.transform(test[[\"f1\"]])\n",
+    "# f1_Bird_col = [f1_encode[i][0] for i in range(len(f1_encode))]\n",
+    "# print(f1_Bird_col)\n",
+    "train.insert(1, \"f1_Bird\", [f1_encode_train[i][0] for i in range(len(f1_encode_train))])\n",
+    "train.insert(2, \"f1_Cat\", [f1_encode_train[i][1] for i in range(len(f1_encode_train))])\n",
+    "train.insert(3, \"f1_Dog\", [f1_encode_train[i][2] for i in range(len(f1_encode_train))])\n",
+    "test.insert(1, \"f1_Bird\", [f1_encode_test[i][0] for i in range(len(f1_encode_test))])\n",
+    "test.insert(2, \"f1_Cat\", [f1_encode_test[i][1] for i in range(len(f1_encode_test))])\n",
+    "test.insert(3, \"f1_Dog\", [f1_encode_test[i][2] for i in range(len(f1_encode_test))])\n",
+    "\n",
+    "# encoding f5\n",
+    "# train[\"f5\"] is now the eighth column\n",
+    "one_hot.fit(train[[\"f5\"]])\n",
+    "f5_encode_train = one_hot.transform(train[[\"f5\"]])\n",
+    "f5_encode_test = one_hot.transform(test[[\"f5\"]])\n",
+    "\n",
+    "train.insert(8, \"f5_Blue\", [f5_encode_train[i][0] for i in range(len(f5_encode_train))])\n",
+    "train.insert(9, \"f5_Green\", [f5_encode_train[i][1] for i in range(len(f5_encode_train))])\n",
+    "train.insert(10, \"f5_Red\", [f5_encode_train[i][2] for i in range(len(f5_encode_train))])    \n",
+    "test.insert(8, \"f5_Blue\", [f5_encode_test[i][0] for i in range(len(f5_encode_test))])\n",
+    "test.insert(9, \"f5_Green\", [f5_encode_test[i][1] for i in range(len(f5_encode_test))])\n",
+    "test.insert(10, \"f5_Red\", [f5_encode_test[i][2] for i in range(len(f5_encode_test))])    \n",
+    "\n",
+    "# encoding f7\n",
+    "# train[\"f7\"] is now the 13th column\n",
+    "one_hot.fit(train[[\"f7\"]]) \n",
+    "f7_encode_train = one_hot.transform(train[[\"f7\"]])\n",
+    "f7_encode_test = one_hot.transform(test[[\"f7\"]])\n",
+    "train.insert(13, \"f7_Maybe\", [f7_encode_train[i][0] for i in range(len(f7_encode_train))])\n",
+    "train.insert(14, \"f7_No\", [f7_encode_train[i][1] for i in range(len(f7_encode_train))])\n",
+    "train.insert(15, \"f7_Yes\", [f7_encode_train[i][2] for i in range(len(f7_encode_train))])\n",
+    "test.insert(13, \"f7_Maybe\", [f7_encode_test[i][0] for i in range(len(f7_encode_test))])\n",
+    "test.insert(14, \"f7_No\", [f7_encode_test[i][1] for i in range(len(f7_encode_test))])\n",
+    "test.insert(15, \"f7_Yes\", [f7_encode_test[i][2] for i in range(len(f7_encode_test))])\n",
+    "\n",
+    "# encoding f9\n",
+    "# train[\"f9\"] is now the 17th column\n",
+    "one_hot.fit(train[[\"f9\"]])\n",
+    "f9_encode_train = one_hot.transform(train[[\"f9\"]])\n",
+    "f9_encode_test = one_hot.transform(test[[\"f9\"]])\n",
+    "train.insert(17, \"f9_X\", [f9_encode_train[i][0] for i in range(len(f9_encode_train))])\n",
+    "train.insert(18, \"f9_Y\", [f9_encode_train[i][1] for i in range(len(f9_encode_train))])\n",
+    "train.insert(19, \"f9_Z\", [f9_encode_train[i][2] for i in range(len(f9_encode_train))])\n",
+    "test.insert(17, \"f9_X\", [f9_encode_test[i][0] for i in range(len(f9_encode_test))])\n",
+    "test.insert(18, \"f9_Y\", [f9_encode_test[i][1] for i in range(len(f9_encode_test))])\n",
+    "test.insert(19, \"f9_Z\", [f9_encode_test[i][2] for i in range(len(f9_encode_test))])\n",
+    "\n",
+    "# encoding f16\n",
+    "# train[\"f16\"] is now the 21st column\n",
+    "one_hot.fit(train[[\"f16\"]])\n",
+    "f16_encode_train = one_hot.transform(train[[\"f16\"]])\n",
+    "f16_encode_test = one_hot.transform(test[[\"f16\"]])\n",
+    "train.insert(21, \"f16_A\", [f16_encode_train[i][0] for i in range(len(f16_encode_train))])\n",
+    "train.insert(22, \"f16_B\", [f16_encode_train[i][1] for i in range(len(f16_encode_train))])\n",
+    "train.insert(23, \"f16_C\", [f16_encode_train[i][2] for i in range(len(f16_encode_train))])\n",
+    "test.insert(21, \"f16_A\", [f16_encode_test[i][0] for i in range(len(f16_encode_test))])\n",
+    "test.insert(22, \"f16_B\", [f16_encode_test[i][1] for i in range(len(f16_encode_test))])\n",
+    "test.insert(23, \"f16_C\", [f16_encode_test[i][2] for i in range(len(f16_encode_test))])\n",
+    "\n",
+    "\n",
+    "# saving encoded train and test data to new csv's\n",
+    "\n",
+    "train.to_csv(\"enc_train\", index=False)\n",
+    "test.to_csv(\"enc_test\", index=False)\n",
+    "\n",
+    "\n",
+    "# print(train)\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "\n",
     "\n",
     "# splitting features\n",
-    "X_train = train.drop(columns = [\"target\"])\n",
-    "y_train = train[\"target\"]\n",
+    "# X_train = train.drop(columns = [\"target\"])\n",
+    "# y_train = train[\"target\"]\n",
     "\n",
-    "X_test = test.drop(columns=[\"target\"])\n",
-    "y_test = test[\"target\"]"
+    "# X_test = test.drop(columns=[\"target\"])\n",
+    "# y_test = test[\"target\"]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bf539c78",
+   "id": "5d6e9062",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03cb986d",
+   "id": "917c5682",
    "metadata": {},
    "outputs": [],
    "source": []
