--- a/pre-processing.ipynb
+++ b/pre-processing.ipynb
@@ -10,7 +10,6 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "from sklearn.preprocessing import OneHotEncoder"
    ]
@@ -18,14 +17,14 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "3a174647",
+   "id": "e17f1b1f",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "1bc71bf2",
+   "id": "9ae3fc2b",
    "metadata": {},
    "source": [
     "## Pre-processing\n",
@@ -141,32 +140,16 @@
     "test.to_csv(\"enc_test\", index=False)\n",
     "\n",
     "\n",
-    "# print(train)\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "\n",
-    "\n",
-    "# splitting features\n",
-    "# X_train = train.drop(columns = [\"target\"])\n",
-    "# y_train = train[\"target\"]\n",
-    "\n",
-    "# X_test = test.drop(columns=[\"target\"])\n",
-    "# y_test = test[\"target\"]"
+    "# print(train)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5d6e9062",
+   "id": "0aa9f7a5",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -192,19 +175,12 @@
      ]
     }
    ],
-   "source": [
-    "# Logistic Regression (for binary classification)\n",
-    "\n",
-    "log_model = LogisticRegression()\n",
-    "log_model.fit(X_train, y_train)\n",
-    "log_pred = log_model.predict(X_test)\n",
-    "log_prob = log_model.predict_proba(X_test)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "917c5682",
+   "id": "8e468543",
    "metadata": {},
    "outputs": [],
    "source": []
