--- a/pre-processing.ipynb
+++ b/pre-processing.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "2fb0664a",
    "metadata": {},
    "outputs": [
@@ -159,26 +159,18 @@
     "test.insert(22, \"f16_B\", [f16_encode_test[i][1] for i in range(len(f16_encode_test))])\n",
     "test.insert(23, \"f16_C\", [f16_encode_test[i][2] for i in range(len(f16_encode_test))])\n",
     "\n",
+    "\n",
+    "\n",
     "# need to now remove the original string categorical data\n",
-    "\n",
-    "\n",
-    "# old_features = [\"f1\", \"f3\", \"f5\", \"f7\", \"f9\", \"f11\", \"f16\"]\n",
-    "\n",
-    "# for feature in old_features:\n",
-    "#     print(feature)\n",
-    "#     train.drop([feature], axis=1)\n",
     "train = train.drop(columns=[\"f1\", \"f3\", \"f5\", \"f7\", \"f9\", \"f11\", \"f16\"])\n",
     "test = test.drop(columns=[\"f1\", \"f3\", \"f5\", \"f7\", \"f9\", \"f11\", \"f16\"])\n",
     "\n",
     "print(train)\n",
     "\n",
     "# saving encoded train and test data to new csv's\n",
-    "\n",
-    "train.to_csv(\"enc_train\", index=False)\n",
-    "test.to_csv(\"enc_test\", index=False)\n",
-    "\n",
-    "\n",
-    "# print(train)\n"
+    "train.to_csv(\"enc_train.csv\", index=False)\n",
+    "test.to_csv(\"enc_test.csv\", index=False)\n",
+    "\n"
    ]
   },
   {
